# tegro-ton-test-tgbot

./: .env.template  .gitignore  Procfile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/versions/: 0a8b704e2aec_create_paylink.py  24963e5577b3_create_user_table.py  2fd42c5e7530_create_transaction.py
src/: db.sqlite3  main.py
src/api/: decorators.py  models.py
src/bot/filters/: __init__.py  buy_tgr_amount_filter.py  float_filter.py  jetton_filter.py  mnemonics_filter.py  wallet_address_filter.py
src/bot/handlers/: __init__.py  buy_tgr.py  common.py  ton_interaction.py
src/bot/keyboards/: __init__.py  buy_tgr.py  common.py  make_multirow_keyboard.py  make_row_keyboard.py  ton_interaction.py
src/buy_tgr_tools/: __init__.py  tgr_purchase.py
src/db/: __init__.py  models.py
src/templates/: index.html
src/tgr_purchase/: __init__.py  tgr_purchase.py
src/ton_tools/: __init__.py  ton_client.py
