[tool.poetry]
name = "tegro-bot"
version = "0.1.0"
description = "Tegro Bot"
authors = ["Dmitrii Kopeikin <kopeikindp@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tegro_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0b8", allow-prereleases = true}
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
aiosqlite = "^0.19.0"
httpx = "^0.24.1"
redis = "^4.6.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
